scripts/ocp/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sbocp
  labels:
    app: sbocp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sbocp
  template:
    metadata:
      labels:
        name: sbocp
    spec:
      containers:
        - name: sbocp
          image: image-registry.openshift-image-registry.svc:5000/devcloud1user2-dev/sbocp:1.0.0
          ports:
            - containerPort: 8081
