scripts/ocp/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sbocp
  namespace: devcloud1user2-dev
spec:
  to: 
    kind: Service
    name: sbocp
    port:
      targetPort: 8081-tcp
